# ft_select

./: CMakeLists.txt  Makefile  README.md
includes/: ft_select.h
src/: execution.c  helpers.c  list_functions.c  main.c  moves.c  signals.c  term_print.c  terminal_mode.c
